[gd_scene load_steps=2 format=3 uid="uid://dn6d6o7px0ku6"]

[ext_resource type="Script" path="res://card_scenes/card_base.gd" id="1_8o6mp"]

[node name="CardBase" type="MarginContainer"]
custom_minimum_size = Vector2(100, 200)
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8o6mp")

[node name="CardImage" type="TextureRect" parent="."]
layout_mode = 2
expand_mode = 5
stretch_mode = 4

[node name="ActionButton" type="Button" parent="."]
layout_mode = 2
flat = true

[connection signal="pressed" from="ActionButton" to="." method="_on_action_button_pressed"]
